@@ -4,6 +4,8 @@ nmap (7.60+dfsg3-1) UNRELEASED; urgency=medium
   * Leave embedded copy of libssh2 in the source package to ease packaging for
     Ubuntu (which requires the embedded copy).
     - Update debian/copyright with the libssh2 copyright details.
+  * Update debian/rules to use the included libssh2 copy when builing for
+    Ubuntu and its derivates.
 
  -- Lukas Schwaighofer <lukas@schwaighofer.name>  Tue, 17 Oct 2017 22:18:52 +0200
 
